Śubida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5bd6c52f3b3b9c1c1c3930b4-259.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1YmQ2YzUyZjNiM2I5YzFjMWMzOTMwYjQiLCJub21icmUiOiJUZXN0IDEiLCJlbWFpbCI6InRlc3QxQGdtYWlsLmNvbSIsIl9fdiI6MH0sImlhdCI6MTU0MDg4OTM4MCwiZXhwIjoxNTQxMDYyMTgwfQ.BPNIn7RV1TQK6QOZl6obnACZ4qtI4qXjMOA07WfbHBU"  />-->
+
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
